@@ -20,7 +20,43 @@
 		}
 
 		.subscriptions-usage__list-item-usage {
+			display: flex;
+			flex-flow: column;
+			justify-content: center;
+			text-align: center;
 			width: 30%;
+
+			@include breakpoint( '>480px' ) {
+				flex-flow: row;
+				justify-content: flex-start;
+				text-align: left;
+			}
+
+			& > .subscriptions-usage__list-item-usage-icon {
+				display: none;
+			}
+
+			&.is-over-limit {
+				& > .subscriptions-usage__list-item-usage-numbers {
+					color: var( --color-red-light );
+					font-weight: 600;
+				}
+
+				& > .subscriptions-usage__list-item-usage-icon {
+					display: block;
+					margin-top: 5px;
+
+					@include breakpoint( '>480px' ) {
+						margin-left: 5px;
+						margin-top: 0;
+					}
+				}
+
+				.components-popover__content {
+					white-space: normal;
+					width: 200px;
+				}
+			}
 		}
 
 		.subscriptions-usage__list-item-actions {
